document chat api and add minor renamings
